samples/_failures_safe/1761663222_2e26c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88f56f9d.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_88f56f9d.c:149:9: error: expected identifier at end of input
  149 |         lexer->
      |         ^~~~~
./samples/SAFE/__tmp_88f56f9d.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_88f56f9d.c:149:9: error: expected declaration or statement at end of input
